flux/manifests/freshrss/freshrss-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: freshrss
  labels:
    app: freshrss
spec:
  selector:
    matchLabels:
      app: freshrss
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  freshrss
      labels:
        app: freshrss
    spec:
      containers:
      - name: freshrss
        image: linuxserver/freshrss:1.25.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
          name: freshrss
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: freshrss-config-pvc
      restartPolicy: Always
