flux/manifests/freshrss/freshrss-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
spec:
  selector:
    app: freshrss
  type: ClusterIP
  ports:
  - name: freshrss
    protocol: TCP
    port: 80
    targetPort: 80
